# Pixelto3dVoxel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  metadata.json  out.mkv  requirements.txt
include/: camera.h  geo_utils.h  math_utils.h  voxel_grid.h
pyRender/: render.py  rendering.py
scripts/: run_voxel.py  visualize_voxels.py
src/: geo_utils.cpp  pixeltovoxel.cpp  process_rays.cpp
